--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -79,10 +79,10 @@ flutter:
   # "family" key with the font family name, and a "fonts" key with a
   # list giving the asset and other descriptors for the font. For
   # example:
-  #fonts:
-  #  - family: Default
-  #    fonts:
-  #      - asset: fonts/Poppins-Regular.ttf
+  fonts:
+    - family: Default
+      fonts:
+        - asset: fonts/poppins.ttf
   #
   # For details regarding fonts from package dependencies,
   # see https://flutter.dev/custom-fonts/#from-packages
