--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -41,6 +41,7 @@ dependencies:
   flutter_slidable: ^3.0.0
   audioplayers: ^4.1.0
   awesome_notifications: ^0.0.6
+  provider: ^6.0.5
   
 dev_dependencies:
   flutter_test:
